xrxgl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xrxgl
  namespace: librareome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xrxgl
  template:
    metadata:
      labels:
        app: xrxgl
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: nautilus.io/vis
                operator: DoesNotExist
              - key: topology.kubernetes.io/region
                operator: In
                values:
                - us-west
      hostname: xrxgl
      containers:
      - name: xrxgl
        image: gitlab-registry.nrp-nautilus.io/monkeytang/xroc_glx:latest
        stdin: true
        tty: true
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 64Gi
            cpu: "16"
            nvidia.com/gpu: 1
          requests:
            memory: 100Mi
            cpu: 100m
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
        - mountPath: /cache
          name: xrxgl-cache-vol
        - mountPath: /home/user
          name: xrxgl-root-vol
        - mountPath: /seaweed
          name: xrxgl-sw-vol
        

      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
      - name: xrxgl-cache-vol
        persistentVolumeClaim:
          claimName: xrxgl-cache-vol
      - name: xrxgl-root-vol
        persistentVolumeClaim:
          claimName: xrxgl-root-vol
      - name: xrxgl-sw-vol
        persistentVolumeClaim:
          claimName: xrxgl-sw-vol
