dev-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dev
  namespace: librareome
  labels:
    app: dev
spec:
  selector:
    app: dev
  ports:
  - name: dev
    protocol: TCP
    port: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: dev-ingress
  namespace: librareome
spec:
  rules:
  - host: dev.nrp-nautilus.io
    http:
      paths:
      - backend:
          serviceName: dev
          servicePort: 8080
        path: /
  tls:
  - hosts:
      - dev.nrp-nautilus.io
