devglx-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: devglx
  namespace: librareome
  labels:
    app: devglx
spec:
  selector:
    app: devglx
  ports:
  - name: devglx
    protocol: TCP
    port: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: devglx-ingress
  namespace: librareome
spec:
  rules:
  - host: devglx.nrp-nautilus.io
    http:
      paths:
      - backend:
          serviceName: dev
          servicePort: 8080
        path: /
  tls:
  - hosts:
      - devglx.nrp-nautilus.io
