dmlglx-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dmlglx
  namespace: librareome
  labels:
    app: dmlglx
spec:
  selector:
    app: dmlglx
  ports:
  - name: dmlglx
    protocol: TCP
    port: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: dmlglx-ingress
  namespace: librareome
spec:
  rules:
  - host: dmlglx.nrp-nautilus.io
    http:
      paths:
      - backend:
          serviceName: dmlglx
          servicePort: 8080
        path: /
  tls:
  - hosts:
      - dmlglx.nrp-nautilus.io
