xrxgl-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: xrxgl
  namespace: librareome
  labels:
    app: xrxgl
spec:
  selector:
    app: xrxgl
  ports:
  - name: xrxgl
    protocol: TCP
    port: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: xrxgl-ingress
  namespace: librareome
spec:
  rules:
  - host: xrxgl.nrp-nautilus.io
    http:
      paths:
      - backend:
          serviceName: xrxgl
          servicePort: 8080
        path: /
  tls:
  - hosts:
      - xrxgl.nrp-nautilus.io
